# patches

./: .gitignore  .markdownlint.json  CLAUDE.md  Cargo.toml  README.md  RELEASE_NOTES.md  bench.sh  deploy.sh  fir.py  osc.patches  rust_out
.cargo/: mutants.toml
patches-alloc-trap/: Cargo.toml
patches-alloc-trap/src/: lib.rs
patches-clap/: Cargo.toml
patches-clap/assets/: app.css  app.js  hello.html  index.html
patches-clap/src/: descriptor.rs  diagnostic_widget.rs  entry.rs  error.rs  extensions.rs  factory.rs  gui.rs  gui_vizia.rs  lib.rs  plugin.rs
patches-cpal/: Cargo.toml
patches-cpal/src/: callback.rs  engine.rs  lib.rs  patch_engine.rs
patches-engine/: Cargo.toml
patches-engine/src/: builder.rs  callback.rs  cleanup.rs  decimator.rs  engine.rs  execution_state.rs  halt.rs  input_capture.rs  kernel.rs  lib.rs  oversampling.rs  planner.rs  pool.rs  processor.rs  wav_recorder.rs
patches-engine/src/builder/: mod.rs  tests.rs
patches-engine/tests/: builder.rs  planner.rs
patches-engine/tests/builder/: graph_build.rs  planner.rs
patches-ffi/: Cargo.toml
patches-ffi/src/: export.rs  lib.rs  loader.rs  scanner.rs  types.rs
patches-ffi/tests/: bundle_loader.rs  conv_reverb_plugin.rs  drums_bundle.rs  export_modules_macro.rs  ffi_grep_gate.rs  gain_plugin.rs  plugin_scanner.rs
patches-host/: Cargo.toml
patches-host/src/: builder.rs  callback.rs  error.rs  lib.rs  load.rs  runtime.rs  source.rs
patches-host/tests/: host.rs
patches-integration-tests/: Cargo.toml
patches-integration-tests/fixtures/: README.md  vintage_baseline.f32  vintage_baseline.patches  vintage_baseline.sha256
patches-integration-tests/golden/: README.md
patches-integration-tests/src/: lib.rs
patches-integration-tests/tests/: alloc_trap.rs  alloc_trap_negative.rs  bundle_shared_library.rs  connectivity_notification.rs  dsl_pipeline.rs  enum_resolution.rs  fdn_reverb_golden.rs  ffi_alloc_trap_cycles.rs  ffi_arctable_drains.rs  ffi_double_release.rs  ffi_hash_mismatch.rs  ffi_round_trip.rs  file_params.rs  hard_sync_aliasing.rs  interval_scaling.rs  off_thread_deallocation.rs  oversampling.rs  panic_halt.rs  phase3_baseline.rs  planner_v2.rs  poly_cables.rs  poly_filters.rs  sah_quant.rs  soak_randomised_params.rs  tracker.rs  vchorus_pipeline.rs  vintage_baseline.rs  vintage_bundle_scanner.rs  vintage_synth_check.rs
patches-integration-tests/tests/tracker/: loop_swing.rs  mod.rs  pattern_switching.rs  slides_repeats.rs  support.rs  transport.rs
patches-interpreter/: Cargo.toml
patches-interpreter/src/: binding.rs  descriptor_bind.rs  error.rs  lib.rs  tests.rs  tracker.rs
patches-interpreter/src/descriptor_bind/: connections.rs  errors.rs  mod.rs  modules.rs
patches-interpreter/src/tests/: errors.rs  happy_path.rs  mod.rs  song_sequencer.rs
patches-lsp/: Cargo.toml  build.rs
patches-lsp/src/: analysis.rs  ast.rs  ast_builder.rs  completions.rs  expansion.rs  hover.rs  inlay.rs  lsp_util.rs  main.rs  navigation.rs  parser.rs  peek.rs  server.rs  shape_render.rs  signal_graph.rs  tree_nav.rs  workspace.rs
patches-lsp/src/analysis/: deps.rs  descriptor.rs  mod.rs  scan.rs  symbols.rs  tests.rs  tracker.rs  types.rs  validate.rs
patches-lsp/src/ast_builder/: diagnostics.rs  file_patch.rs  literals.rs  mod.rs  module_decl.rs  params.rs  song_pattern.rs
patches-lsp/src/completions/: backward_scan.rs  mod.rs  module_types.rs  params.rs  ports.rs  shape.rs  tap.rs
patches-lsp/src/hover/: mod.rs  module.rs  param.rs  port.rs  tap.rs  template.rs
patches-lsp/src/workspace/: analysis.rs  features.rs  include_graph.rs  lifecycle.rs  mod.rs  publish.rs  tests.rs
patches-lsp/tree-sitter-patches/: grammar.js  package-lock.json  package.json
patches-lsp/tree-sitter-patches/queries/: highlights.scm
patches-lsp/tree-sitter-patches/src/: grammar.json  node-types.json  parser.c
patches-modules/: Cargo.toml
patches-modules/examples/: filter_bench.rs
patches-modules/src/: adsr.rs  audio_in.rs  audio_out.rs  audio_tap.rs  bitcrusher.rs  clap_drum.rs  claves.rs  clock.rs  convolution_reverb.rs  cymbal.rs  delay.rs  drive.rs  fdn_reverb.rs  filter.rs  glide.rs  hihat.rs  host_transport.rs  kick.rs  lfo.rs  lib.rs  limiter.rs  master_sequencer.rs  midi_arp.rs  midi_cc.rs  midi_delay.rs  midi_drumset.rs  midi_in.rs  midi_source.rs  midi_split.rs  midi_to_cv.rs  midi_transpose.rs  mixer.rs  mono_to_poly.rs  ms_ticker.rs  noise.rs  oscillator.rs  pattern_player.rs  pitch_shift.rs  poly_adsr.rs  poly_filter.rs  (+28 more)
patches-modules/src/common/: approximate.rs  delay_buffer.rs  frequency.rs  mod.rs  param_access.rs  phase_accumulator.rs  waveforms.rs
patches-modules/src/convolution_reverb/: core.rs  ir_loader.rs  mod.rs  params.rs  stereo.rs  tests.rs
patches-modules/src/fdn_reverb/: line.rs  matrix.rs  mod.rs  params.rs  processor.rs  tests.rs
patches-modules/src/filter/: bandpass.rs  highpass.rs  lowpass.rs  mod.rs  tests.rs
patches-modules/src/master_sequencer/: lookup.rs  mod.rs  params.rs  playback.rs  tests.rs
patches-planner/: Cargo.toml
patches-planner/src/: lib.rs  planner.rs
patches-player/: Cargo.toml  build.rs
patches-player/src/: diagnostic_render.rs  fake_publisher.rs  main.rs  splash.rs  tui.rs
patches-plugin-common/: Cargo.toml
patches-plugin-common/src/: gui.rs  lib.rs  meter.rs
patches-profiling/: Cargo.toml
patches-profiling/src/: lib.rs  timing_collector.rs  timing_shim.rs
patches-svg/: Cargo.toml
patches-svg/src/: flat_to_layout.rs  hints.rs  layout.rs  lib.rs  render.rs
patches-svg/tests/: smoke.rs
patches-tools/: Cargo.toml
patches-vintage/: Cargo.toml  README.md
patches-vintage/examples/: gritty_lead.patches  plucky_keys.patches  split_pad_lead.patches  sync_bass.patches  warm_pad.patches
patches-vintage/patches/: vintage_synth.patches
patches-vintage/src/: bbd_clock.rs  bbd_filter_proto.rs  bbd_proto.rs  lib.rs  vbbd.rs  vchorus.rs  vdco.rs  vflanger.rs  vflanger_stereo.rs  vladder.rs  vota_poly_vcf.rs  vota_vcf.rs  vpoly_ladder.rs  vpoly_vcf.rs  vreverb.rs  vvcf.rs
test-plugins/drums-bundle/: Cargo.toml
(+1393 files in other folders)
