[workspace]
members = [
    "patches-core",
    "patches-registry",
    "patches-diagnostics",
    "patches-dsl",
    "patches-dsp",
    "patches-interpreter",
    "patches-modules",
    "patches-io",
    "patches-engine",
    "patches-planner",
    "patches-cpal",
    "patches-host",
    "patches-integration-tests",
    "patches-player",
    "patches-tools",
    "patches-profiling",
    "patches-clap",
    "patches-plugin-common",
    "patches-lsp",
    "patches-svg",
    "patches-tracker-core",
    "patches-vintage",
    "patches-ffi",
    "patches-ffi-common",
    "patches-alloc-trap",
    "test-plugins/gain",
    "test-plugins/gain-bad-hash",
    "test-plugins/all-tags",
    "test-plugins/release-on-update",
]
# Shelved WASM crates — excluded from build. See adr/0027-wasm-module-loading.md.
# "patches-wasm-sdk",
# "patches-wasm",
# "examples-wasm/wavefolder-rs",
resolver = "2"

[profile.release]
debug = 1  # line-level debug info for profiling symbols
