[package]
name = "patches-clap"
version = "0.1.0"
edition = "2021"
description = "CLAP audio plugin wrapping the Patches engine"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
patches-core = { path = "../patches-core" }
patches-host = { path = "../patches-host" }
patches-registry = { path = "../patches-registry" }
patches-engine = { path = "../patches-engine" }
patches-planner = { path = "../patches-planner" }
patches-modules = { path = "../patches-modules" }
patches-diagnostics = { path = "../patches-diagnostics" }
patches-alloc-trap = { path = "../patches-alloc-trap" }
clap-sys = "0.5"
rfd = "0.17"
rtrb = "0.3"
vizia = { git = "https://github.com/vizia/vizia", default-features = false, features = ["baseview"] }
