[package]
name = "patches-clap"
version = "0.1.0"
edition = "2021"
description = "CLAP audio plugin wrapping the Patches engine"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
patches-core = { path = "../patches-core" }
patches-host = { path = "../patches-host" }
patches-registry = { path = "../patches-registry" }
patches-engine = { path = "../patches-engine" }
patches-planner = { path = "../patches-planner" }
patches-modules = { path = "../patches-modules" }
patches-ffi = { path = "../patches-ffi" }
patches-diagnostics = { path = "../patches-diagnostics" }
patches-plugin-common = { path = "../patches-plugin-common" }
patches-alloc-trap = { path = "../patches-alloc-trap" }
clap-sys = "0.5"
rfd = "0.17"
rtrb = "0.3"
wry = "0.55"
raw-window-handle = "0.6"
serde_json = "1"
