[package]
name = "patches-engine"
version = "0.6.0"
edition = "2021"

[dependencies]
patches-core = { path = "../patches-core" }
patches-dsp = { path = "../patches-dsp" }
patches-io = { path = "../patches-io" }
cpal = "0.15"
rtrb = "0.3"
midir = "0.10"

[dev-dependencies]
patches-modules = { path = "../patches-modules" }

[lib]
name = "patches_engine"
path = "src/lib.rs"
doctest = false
