[package]
name = "patches-ffi"
version = "0.1.0"
edition = "2021"

[lib]
name = "patches_ffi"
path = "src/lib.rs"

[dependencies]
patches-core = { path = "../patches-core" }
patches-registry = { path = "../patches-registry" }
patches-ffi-common = { path = "../patches-ffi-common" }
libloading = "0.8"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
test-gain-plugin = { path = "../test-plugins/gain" }
