[package]
name = "patches-integration-tests"
version = "0.2.0"
edition = "2021"
publish = false

[lib]
doctest = false

[dependencies]
patches-core = { path = "../patches-core", features = ["test-support"] }
patches-registry = { path = "../patches-registry" }
patches-engine = { path = "../patches-engine" }
patches-planner = { path = "../patches-planner" }
patches-ffi-common = { path = "../patches-ffi-common" }
rtrb = "0.3"

[dev-dependencies]
patches-modules = { path = "../patches-modules" }
patches-dsl = { path = "../patches-dsl" }
patches-dsp = { path = "../patches-dsp" }
patches-interpreter = { path = "../patches-interpreter" }
patches-ffi = { path = "../patches-ffi" }
patches-ffi-common = { path = "../patches-ffi-common" }
patches-alloc-trap = { path = "../patches-alloc-trap" }
libloading = "0.8"
test-gain-plugin = { path = "../test-plugins/gain" }
test-gain-bad-hash-plugin = { path = "../test-plugins/gain-bad-hash" }
test-all-tags-plugin = { path = "../test-plugins/all-tags" }
test-release-on-update-plugin = { path = "../test-plugins/release-on-update" }
sha2 = "0.10"

[features]
default = []
# Run integration tests under the audio-thread allocator trap.
# Enables the trap feature in `patches-alloc-trap`; individual tests are
# expected to install `TrappingAllocator` as the `#[global_allocator]`.
audio-thread-allocator-trap = ["patches-alloc-trap/audio-thread-allocator-trap"]
