[package]
name = "patches-interpreter"
version = "0.6.0"
edition = "2021"

[lib]
name = "patches_interpreter"
path = "src/lib.rs"
doctest = false

[dependencies]
patches-core = { path = "../patches-core" }
patches-registry = { path = "../patches-registry" }
patches-dsl  = { path = "../patches-dsl" }
patches-modules = { path = "../patches-modules" }
