[package]
name = "patches-lsp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "patches-lsp"
path = "src/main.rs"

[dependencies]
patches-core = { path = "../patches-core" }
patches-registry = { path = "../patches-registry" }
patches-dsl = { path = "../patches-dsl" }
patches-diagnostics = { path = "../patches-diagnostics" }
patches-interpreter = { path = "../patches-interpreter" }
patches-modules = { path = "../patches-modules" }
patches-svg = { path = "../patches-svg" }
tower-lsp = "0.20"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std"] }
tree-sitter = "0.24"
tree-sitter-language = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"

[build-dependencies]
cc = "1"
