[package]
name = "patches-player"
version = "0.6.0"
edition = "2021"
publish = false

[[bin]]
name = "patch_player"
path = "src/main.rs"

[dependencies]
patches-host        = { path = "../patches-host" }
patches-cpal        = { path = "../patches-cpal" }
patches-engine      = { path = "../patches-engine" }
patches-planner     = { path = "../patches-planner" }
patches-dsl         = { path = "../patches-dsl" }
patches-modules     = { path = "../patches-modules" }
patches-core        = { path = "../patches-core" }
patches-diagnostics = { path = "../patches-diagnostics" }
ariadne             = "0.6"
