[package]
name = "patches-svg"
version = "0.1.0"
edition = "2021"
description = "SVG renderer for Patches DSL FlatPatch graphs"
publish = false

[lib]
name = "patches_svg"
path = "src/lib.rs"

[[bin]]
name = "patches-svg"
path = "src/bin/patches-svg.rs"

[dependencies]
patches-core = { path = "../patches-core" }
patches-dsl = { path = "../patches-dsl" }
patches-modules = { path = "../patches-modules" }
rust-sugiyama = "0.4"

[dev-dependencies]
quick-xml = "0.36"
